--- a/src/index.html
+++ b/src/index.html
@@ -566,6 +566,44 @@
             </div>
           </div>
         </div>
+        <div
+          class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-12 d-flex align-items-stretch"
+        >
+        <div class="card full-width">
+          <div class="card-body">
+            <h4>
+              Sign Typed Data V4 Domain-Only
+            </h4>
+
+            <button
+              class="btn btn-primary btn-lg btn-block mb-3"
+              id="signTypedDataV4DomainOnly"
+              disabled
+            >
+              Sign
+            </button>
+
+            <p class="info-text alert alert-warning">
+              Result:
+              <span id="signTypedDataV4ResultDomainOnly"></span>
+            </p>
+
+            <button
+              class="btn btn-primary btn-lg btn-block mb-3"
+              id="signTypedDataV4VerifyDomainOnly"
+              disabled
+            >
+              Verify
+            </button>
+
+            <p class="info-text alert alert-warning">
+              Recovery result:
+              <span id="signTypedDataV4VerifyResultDomainOnly"></span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
       </section>
       <section>
         <div class="row d-flex justify-content-center">
